--- a/debug-piwik-2.html
+++ b/debug-piwik-2.html
@@ -2,9 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>LabsMedia | Communicate differently
-</title>
-	<meta name="description" content="Communicate differently with LabsMedia and optimize your Web efforts thanks to a wide Web 2.0 tools and SEO.
+	<title>Dugwood</title>
 "/>
 </head>
 <body>
