Applied redesign by Didem Gurdur

--- a/debug.htm
+++ b/debug.htm
@@ -1,38 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Debug clickheat</title>
-</head>
-<body>
-<div>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Debug clickheat</title>
+	</head>
+	<body>
+		<div>
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<script type="text/javascript"><!--
-document.write('<a id="test_a" href="debug.htm?debugclickheat&amp;i=' + Date() + '">link</a> ' + Date()); //-->
-</script>
-<br /><br /><br /><br />
-<div style="background-color:#faa;border:1px solid red;width:100px;height:100px;position:absolute;top:500px;left:500px">DIV @ 500x500 (taille 100x100)</div>
-<script type="text/javascript"><!--
-document.write('<iframe src="http://www.dugwood.fr/index.html" width="400" height="200"></iframe>');//-->
-</script>
-<br /><br /><br /><br /><br /><br /><br />
-Milieu&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x
-<script type="text/javascript"><!--
-var h = document.body.clientHeight;
- var b = parseInt(h * 1.33);
- document.write('<img src="http://www.labsmedia.com/admin/clickheat/images/logo170.png" width="' + b + '" height="' + h + '" border="5">'); //-->
-</script>
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			<script type="text/javascript"><!--
+			document.write('<a id="test_a" href="debug.htm?debugclickheat&amp;i=' + Date() + '">link</a> ' + Date()); //-->
+			</script>
+			<br /><br /><br /><br />
+			<div style="background-color:#faa;border:1px solid red;width:100px;height:100px;position:absolute;top:500px;left:500px">DIV @ 500x500 (taille 100x100)</div>
+			<script type="text/javascript"><!--
+				document.write('<iframe src="https://www.dugwood.fr/index.html" width="400" height="200"></iframe>');//-->
+			</script>
+			<br /><br /><br /><br /><br /><br /><br />
+			Milieu&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x&nbsp;x
+			<script type="text/javascript"><!--
+				var h = document.body.clientHeight;
+				var b = parseInt(h * 1.33);
+				document.write('<img src="https://www.dugwood.com/admin/clickheat/images/logo170.png" width="' + b + '" height="' + h + '" border="5">'); //-->
+			</script>
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-Fin
-<script type="text/javascript" src="/clickheat/js/clickheat-original.js"></script>
-<script type="text/javascript"><!--
-clickHeatSite = 'real';clickHeatGroup = 'index';
-clickHeatServer = 'http://' + document.location.host + '/clickheat/click.php';
-initClickHeat(); //-->
-</script>
+			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+			Fin
+			<script type="text/javascript" src="/clickheat/js/clickheat-original.js"></script>
+			<script type="text/javascript"><!--
+			clickHeatSite = 'real';
+				clickHeatGroup = 'index';
+				clickHeatServer = 'http://' + document.location.host + '/clickheat/click.php';
+				initClickHeat(); //-->
+			</script>
 
-</div>
-</body>
+		</div>
+	</body>
 </html>
